--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,11 +14,13 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: checkout branch feature/meta-model-generator
-      run: git checkout feature/meta-model-generator
+      run: echo git checkout
+          git checkout feature/meta-model-generator
       
     - uses: actions/npm@master
     - name: Lerna install
       run: 
+        echo Lerna install
         npm i -g lerna
         lerna bootstrap
       env:
