--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,16 +14,19 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: checkout branch feature/meta-model-generator
-      run: echo git checkout
-          git checkout feature/meta-model-generator
+      run: |
+        echo git checkout
+        git checkout feature/meta-model-generator
       
     - uses: actions/setup-node@master
     - name: Lerna install
-      run: 
+      run: | 
         echo Lerna install
         npm i -g lerna
         lerna bootstrap
         npm -i -g yarn
         yarn install
+        echo build it
+        lerna run build
       env:
         CI: true
