--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -11,7 +11,7 @@
       "es6",
       "es2016.array.include"
     ],
-    "module": "commonjs",
+    "module": "ES6",
     "moduleResolution": "node",
     "newLine": "lf",
     "noEmit": false,
@@ -23,7 +23,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strictNullChecks": false,
-    "target": "es6",
+    "target": "ES6",
     "types": [
       "node",
       "jest"
