--- a/packages/playground/tsconfig.json
+++ b/packages/playground/tsconfig.json
@@ -13,6 +13,7 @@
 
   "compilerOptions": {
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "isolatedModules": false,
     "importsNotUsedAsValues": "preserve",
     "outDir": "dist",
@@ -23,6 +24,8 @@
       "es6",
       "es2019"
     ],
+    "module": "ES6",
+    "moduleResolution": "Node",
     "types": [
       "node",
       "svelte"
