--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -7,12 +7,12 @@
     "build-app": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
+    "start:dev": "sirv public --single --dev --port=5002",
     "validate": "svelte-check",
     "install-local": "yarn install --registry http://localhost:4873",
     "clean": "rm src/example/*/*/*.js && rm src/example/*/*/*.js.map",
     "example": 	    "bash ../../scripts/projectit-dev.sh all -d src/example/defs -o src/example"
   },
-  "type": "module",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
